--- a/css/styles.css
+++ b/css/styles.css
@@ -60,7 +60,7 @@ img {
 
 /*Utilidades*/
 .text-center {
-  align-items: center;
+  text-align: center;
 }
 
 /*Degradados*/
@@ -239,4 +239,96 @@ img {
 .texto-sobre-tech p {
   font-size: 2rem;
   line-height: 2;
+}
+
+/*Modelos*/
+.modelos {
+  padding: var(--separacion) 0;
+}
+
+.header-modelos {
+  font-size: 6rem;
+  margin-bottom: var(--separacion);
+}
+
+.listado-modelos {
+  display: flex;
+  flex-direction: column-reverse;
+}
+
+@media (min-width: 992px) {
+  .listado-modelos {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(2, 20rem);
+    gap: var(--separacion);
+  }
+}
+
+.modelo {
+  background-color: var(--grisClaro);
+  margin-bottom: calc(var(--separacion) / 2);
+  padding-left: 4rem;
+  color: var(--primario);
+  border-radius: 2rem;
+  min-height: 20rem;
+  background-repeat: no-repeat;
+  background-position: 90% center;
+  background-size: 12rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+@media (min-width: 992px) {
+  .modelo {
+    margin-bottom: 0;
+  }
+}
+
+.modelo h3 {
+  font-size: 2.4rem;
+}
+
+.modelo .precio {
+  font-size: 4rem;
+  font-weight: 900;
+  line-height: 0;
+}
+
+.modelo:first-of-type {
+  margin-bottom: 0;
+}
+
+.modelo-x {
+  background-image: url(../img/modelo-x.svg);
+  background-repeat: no-repeat;
+}
+
+.modelo-y {
+  background-image: url(../img/modelo-y.svg);
+}
+
+.modelo-z {
+  background-image: url(../img/modelo-z.svg);
+  background-color: var(--primario);
+  color: var(--blanco);
+}
+
+@media (min-width: 992px) {
+  .modelo-z {
+    grid-column: 2/3;
+    grid-row: 1 / 3;
+    background-size: 22rem;
+  }
+}
+
+.modelo-z .precio {
+  font-size: 6rem;
+}
+
+@media (min-width: 992px) {
+  .modelo-z .precio {
+    font-size: 7rem;
+  }
 }
